          (m2expr_BuildModM2Check) tidied up and call
          m2expr_BuildISOModM2Check.
	* gm2/gm2-gcc/m2expr.c:  (checkWholeModCeilOverflow) use
          the correct parameter to test against zero.
          (checkWholeModFloorOverflow)  New function.
          (m2expr_checkWholeOverflow) enable FLOOR_MOD_EXPR checking.
          (m2expr_BuildISOModM2Check) rewritten.
	  (Completed modulus checking and enabled with -fsoft-check-all).

2019-08-22      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  added $(srcdir) to prevent
          race hazard in building from gm2/gm2-pge-boot/*c
	  files.

2019-08-22      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-gcc/m2expr.c:  (interim commit).
          (BuildTruthNotIf)  New function.  (BuildModCeilCheck)
          New function.  (BuildModFloorCheck)  New function.
          (checkWholeModCeilOverflow) New function.
          (checkWholeOverflow) call checkWholeModCeilOverflow.
          (BuildModM2Check) added interim code.

2019-08-21      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/patches/gcc/trunk/01-patches:  regenerated.
	* gm2/patches/gcc/trunk/02-patches:  regenerated.
	* gm2/patches/gcc/trunk/03-patches:  regenerated.
	* gm2/patches/gcc/trunk/04-patches:  regenerated.
	* gm2/patches/gcc/trunk/05-patches:  regenerated.
	* gm2/patches/gcc/trunk/06-patches:  regenerated.
	* gm2/patches/gcc/trunk/07-patches:  regenerated.
	* gm2/patches/gcc/trunk/08-patches:  regenerated.
	* gm2/patches/gcc/trunk/09-patches:  regenerated.
	* gm2/patches/gcc/trunk/10-patches:  regenerated.

2019-08-20      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  use -p parameter for mkdir.
	* gm2/gm2-compiler/M2GenGCC.mod:  (BuildModM2Check) imported.
          (CodeStatement)  call CodeModM2Checked.  (CodeModM2Checked)
          New procedure.  (CodeModM2Check)  New procedure.
	* gm2/gm2-gcc/m2expr.c:  (BuildModTruncCheck)  New function.