@@ -24,6 +24,7 @@ load_lib gm2-torture.exp
 
 global TORTURE_OPTIONS
 
+set old_options $TORTURE_OPTIONS
 set TORTURE_OPTIONS [list \
 			 { -O2 -fsoft-check-all } \
 			 { -O2 -g -fsoft-check-all } \
@@ -40,3 +41,5 @@ foreach testcase [lsort [glob -nocomplain $srcdir/$subdir/*.mod]] {
 
     gm2-torture-fail $testcase
 }
+
+set TORTURE_OPTIONS $old_options
